--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -3,8 +3,44 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Profile</title>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
+<div class="card-body">
+ 		<nav class = "navbar navbar-expand-sm navbar-dark bg-secondary">
+            <a class = "navbar-brand" href ="">PayMyBuddy</a>
+            <button class = "navbar-toggler" type = "button" data-toggle = "collapse" 
+               data-target = "#navbarSupportedContent" 
+               aria-controls = "navbarSupportedContent" aria-expanded = "false" 
+               aria-label = "Toggle navigation">
+               <span class = "navbar-toggler-icon"></span>
+            </button>
+            
+            <div class = "collapse navbar-collapse" id = "navbarSupportedContent">
+               <ul class = "navbar-nav mr-auto">
+                  <li class = "nav-item">
+                     <a class = "nav-link active"href="/home.html" th:href="@{/home}">Home</a>
+                  </li>
+                  <li class = "nav-item">
+                     <a class = "nav-link" href = "/transfer.html" th:href ="@{/transfer}">Transfer</a>
+                  </li>
+                  <li class = "nav-item">
+                     <a class = "nav-link" href = "/transfer.html" th:href ="@{/account}">Account</a>
+                  </li>
+                  <li class = "nav-item ">
+                     <a class = "nav-link" href = "templates/profile.html" th:href ="@{/profile}">Profile</a>
+                  </li>
+                   <li class = "nav-item ">
+                     <a class = "nav-link" href = "templates/contact.html" th:href ="@{/contact}">Contact</a>
+                  </li>
+                   <li class = "nav-item ">
+                     <a class = "nav-link" href = "login.html" th:href ="@{/login}">Log off</a>
+                  </li>
+               </ul>
+               
+            </div>
+      	</nav> 
+      	</div>
 
 </body>
 </html>
