--- a/src/main/resources/templates/transactionDetails.html
+++ b/src/main/resources/templates/transactionDetails.html
@@ -1,19 +1,15 @@
+<!DOCTYPE html>
 <html lang="en"  xmlns:th="https://www.thymeleaf.org">
 <head>
-<!-- Meta tags -->
-<meta charset="utf-8">
+<meta charset="ISO-8859-1">
 <meta name="viewport" content="width = device-width, initial-scale = 1, shrink-to-fit = no">
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-
-<title>PayMyBuddy App</title>
+<title>PayMyBuddy</title>
 </head>
-
 <body>
-	<div class="card-body">
+<div class="card-body">
  		<nav class = "navbar navbar-expand-sm navbar-dark bg-secondary">
             <a class = "navbar-brand" href ="">PayMyBuddy</a>
             <button class = "navbar-toggler" type = "button" data-toggle = "collapse" 
@@ -26,7 +22,7 @@
             <div class = "collapse navbar-collapse" id = "navbarSupportedContent">
                <ul class = "navbar-nav mr-auto">
                   <li class = "nav-item">
-                     <a class = "nav-link active" href = "/home">Home</a>
+                     <a class = "nav-link active" href="/home.html" th:href="@{/home}">Home</a>
                   </li>
                   <li class = "nav-item">
                      <a class = "nav-link" href = "/transfer.html" th:href ="@{/transfer}">Transfer</a>
@@ -47,9 +43,28 @@
                
             </div>
       	</nav> 
-		<h2  class = "mt-4">Welcome to the PayMyBuddy application!</h2> <br>
-		<h5 >Made for friends who want to transfer money to friends easily.</h5>
+      
+      	<div>
+      	<a th:href="@{/showTransaction}">  </a>
+			<h1>Transaction</h1>
+			<table border="1" class="table table-striped table-responsive-md">
+				<thead>
+					<tr>
+						<th>Connections</th>
+						<th>Description</th>
+						<th>Amount</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="Connection : ${listConnection}">
+						<td th:text="${Connection.recieverEmail}"></td>
+						<td th:text="${Connection.Description}"></td>
+						<td th:text="${account.amount}"></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 		
-	</div>
+		</div>
 </body>
 </html>
