--- a/src/main/resources/templates/transfer.html
+++ b/src/main/resources/templates/transfer.html
@@ -1,10 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>PayMyBuddy</title>
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
 </head>
 <body>
+	<div class="card-body">
+		<nav class="navbar navbar-expand-sm navbar-dark bg-secondary">
+			<a class="navbar-brand" href="">PayMyBuddy</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
+				data-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
 
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item"><a class="nav-link active" href="/home.html" th:href="@{/home}">Home</a>
+					</li>
+					<li class="nav-item"><a class="nav-link" href="/transfer.html"
+						th:href="@{/transfer}">Transfer</a></li>
+					<li class="nav-item"><a class="nav-link" href="/transfer.html"
+						th:href="@{/newAccountForm}">Account</a></li>
+					<li class="nav-item "><a class="nav-link"
+						href="templates/profile.html" th:href="@{/profile}">Profile</a></li>
+					<li class="nav-item "><a class="nav-link"
+						href="templates/contact.html" th:href="@{/contact}">Contact</a></li>
+					<li class="nav-item "><a class="nav-link" href="login.html"
+						th:href="@{/login}">Log off</a></li>
+				</ul>
+			</div>
+		</nav>
+		<div class="container my-2">
+			<form action="#" th:action="@{/makePayment}"
+				th:object="${connection}" method="POST">
+				<div th:if="${param.error}">
+					<div class="alert alert-danger">Invalid User email address provided.</div>
+				</div>
+				<!-- Add hidden form field to handle update -->
+            <input type="text" th:field="*{recieverEmail}" placeholder="Connection Email"class="form-control mb-4 col-4">  
+
+            <input type="text" th:field="*{amount}" placeholder="Amount" class="form-control mb-4 col-4">
+
+            <input type="text" th:field="*{description}" placeholder="Description"class="form-control mb-4 col-4">
+
+            <button type="submit" class="btn btn-info col-2"> Pay</button>
+			</form>
+			</div>
+			<div class="form-group">
+				<span>Click to See Transaction Details <a href="templates/transactionDetails.html" th:href="@{/transactionDetails}"> Transactions</a></span>
+			</div>
+			
+</div>
 </body>
 </html>
