--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -10,55 +10,30 @@
 </head>
 </head>
 <body>
-	<div class="card-body">
-		<nav class="navbar navbar-expand-sm navbar-dark bg-secondary">
-			<a class="navbar-brand" href="">PayMyBuddy</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse"
-				data-target="#navbarSupportedContent"
-				aria-controls="navbarSupportedContent" aria-expanded="false"
-				aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item"><a class="nav-link active" href="/home.html" th:href="@{/home}">>Home</a>
-					</li>
-					<li class="nav-item"><a class="nav-link" href="/transfer.html"
-						th:href="@{/transfer}">Transfer</a></li>
-					<li class="nav-item"><a class="nav-link" href="/transfer.html"
-						th:href="@{/newAccountForm}">Account</a></li>
-					<li class="nav-item "><a class="nav-link"
-						href="templates/profile.html" th:href="@{/profile}">Profile</a></li>
-					<li class="nav-item "><a class="nav-link"
-						href="templates/contact.html" th:href="@{/contact}">Contact</a></li>
-					<li class="nav-item "><a class="nav-link" href="login.html"
-						th:href="@{/login}">Log off</a></li>
-				</ul>
-			</div>
-		</nav>
 		<div class="container my-2">
-			<a th:href="@{/newAccountForm}"> Add Bank Details and Amount </a>
-			<h1>Bank Details and Amount</h1>
+			<h1>YOur Bank Details and Amount in Account</h1>
 			<table border="1" class="table table-striped table-responsive-md">
 				<thead>
 					<tr>
 						<th>Bank Name</th>
 						<th>Account Number</th>
 						<th>Amount</th>
-						<th>Action</th>
+						<th>Add Money</th>
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:each="account : ${listAccount}">
+					<tr th:each="account : ${accountOfUser}">
 						<td th:text="${account.bankName}"></td>
 						<td th:text="${account.bankAccountNumber}"></td>
 						<td th:text="${account.amount}"></td>
-						 <td><a th:href="@{/AddMoneyByAccount/{id}(id=${account.id})}" class="btn btn-primary"> Change Account Details</a></td>
+						<td><a th:href="@{/AddMoneyToAccount}"
+							class="btn btn-primary"> Add Money To Account Balance</a></td>
 					</tr>
 				</tbody>
 			</table>
+			<p><a th:href="@{/uploadMoney}"
+							class="btn btn-primary"> Add Money To your PayMyBuddy Balance</a></p>
 		</div>
-		</div>
+	</div>
 </body>
 </html>
