--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,4 +1,5 @@
-<html lang="en"  xmlns:th="https://www.thymeleaf.org">
+<html lang="en"  xmlns:th="https://www.thymeleaf.org"
+ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <!-- Meta tags -->
 <meta charset="utf-8">
@@ -30,9 +31,6 @@
                   </li>
                   <li class = "nav-item">
                      <a class = "nav-link" href = "/transfer.html" th:href ="@{/transfer}">Transfer</a>
-                  </li>
-                  <li class = "nav-item">
-                     <a class = "nav-link" href = "/transfer.html" th:href ="@{/account}">Account</a>
                   </li>
                   <li class = "nav-item ">
                      <a class = "nav-link" href = "templates/profile.html" th:href ="@{/profile}">Profile</a>
