--- a/src/main/resources/templates/new_account.html
+++ b/src/main/resources/templates/new_account.html
@@ -4,54 +4,34 @@
 <meta charset="ISO-8859-1">
 <title>PayMyBuddy</title>
 <link rel="stylesheet"
- href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
- integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
- crossorigin="anonymous">
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
 </head>
 <body>
-<div class="card-body">
- 		<nav class = "navbar navbar-expand-sm navbar-dark bg-secondary">
-            <a class = "navbar-brand" href ="">PayMyBuddy</a>
-            <button class = "navbar-toggler" type = "button" data-toggle = "collapse" 
-               data-target = "#navbarSupportedContent" 
-               aria-controls = "navbarSupportedContent" aria-expanded = "false" 
-               aria-label = "Toggle navigation">
-               <span class = "navbar-toggler-icon"></span>
-            </button>
-            
-            <div class = "collapse navbar-collapse" id = "navbarSupportedContent">
-               <ul class = "navbar-nav mr-auto">
-                  <li class = "nav-item">
-                     <a class = "nav-link active"href="/home.html" th:href="@{/home}">Home</a>
-                  </li>
-                  <li class = "nav-item">
-                     <a class = "nav-link" href = "/transfer.html" th:href ="@{/transfer}">Transfer</a>
-                  </li>
-                  <li class = "nav-item">
-                     <a class = "nav-link" href = "/transfer.html" th:href ="@{/account}">Account</a>
-                  </li>
-                  <li class = "nav-item ">
-                     <a class = "nav-link" href = "templates/profile.html" th:href ="@{/profile}">Profile</a>
-                  </li>
-                   <li class = "nav-item ">
-                     <a class = "nav-link" href = "templates/contact.html" th:href ="@{/contact}">Contact</a>
-                  </li>
-                   <li class = "nav-item ">
-                     <a class = "nav-link" href = "login.html" th:href ="@{/login}">Log off</a>
-                  </li>
-               </ul>
-               
-            </div>
-      	</nav> 
-<div class = "container" >
-<h1>Save Account  Details and Amount </h1>
-<form th:action="@{/saveAccount}" th:object ="${account}" method="post"> 
-<input type="text" th:field = "*{bankName}" placeholder="Bank Name" class="form-control mb-4 col-4">
-<input type="text" th:field = "*{bankAccountNumber}" placeholder="Account Number" class="form-control mb-4 col-4">
-<input type="text" th:field = "*{amount}" placeholder="Enter Amount to be loaded" class="form-control mb-4 col-4">
-<button type="submit" class="btn btn-info col-2"> Save Account</button>
-</form>
-</div>
-</div>
+	<div class="card-body">
+		<div class="container">
+			<h1>Save Account Details and Amount</h1>
+			<form th:action="@{/saveAccount}" th:object="${account}"
+				method="post">
+				<div>
+					<label>BankName</label> <input type="text" th:field="*{bankName}"
+						placeholder="Bank Name" class="form-control mb-4 col-4">
+				</div>
+				<div>
+					<label>BankAccountNumber</label> <input type="text"
+						th:field="*{bankAccountNumber}" placeholder="Account Number"
+						class="form-control mb-4 col-4">
+				</div>
+				<div>
+					<label>Amount</label><input type="text" th:field="*{amount}"
+						placeholder="Enter Amount to be loaded"
+						class="form-control mb-4 col-4">
+				</div>
+				<button type="submit" class="btn btn-info col-2">Save
+					Account</button>
+			</form>
+		</div>
+	</div>
 </body>
 </html>
