--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,46 +1,60 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
 <title>Profile</title>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
 </head>
 <body>
-<div class="card-body">
- 		<nav class = "navbar navbar-expand-sm navbar-dark bg-secondary">
-            <a class = "navbar-brand" href ="">PayMyBuddy</a>
-            <button class = "navbar-toggler" type = "button" data-toggle = "collapse" 
-               data-target = "#navbarSupportedContent" 
-               aria-controls = "navbarSupportedContent" aria-expanded = "false" 
-               aria-label = "Toggle navigation">
-               <span class = "navbar-toggler-icon"></span>
-            </button>
-            
-            <div class = "collapse navbar-collapse" id = "navbarSupportedContent">
-               <ul class = "navbar-nav mr-auto">
-                  <li class = "nav-item">
-                     <a class = "nav-link active"href="/home.html" th:href="@{/home}">Home</a>
-                  </li>
-                  <li class = "nav-item">
-                     <a class = "nav-link" href = "/transfer.html" th:href ="@{/transfer}">Transfer</a>
-                  </li>
-                  <li class = "nav-item">
-                     <a class = "nav-link" href = "/transfer.html" th:href ="@{/account}">Account</a>
-                  </li>
-                  <li class = "nav-item ">
-                     <a class = "nav-link" href = "templates/profile.html" th:href ="@{/profile}">Profile</a>
-                  </li>
-                   <li class = "nav-item ">
-                     <a class = "nav-link" href = "templates/contact.html" th:href ="@{/contact}">Contact</a>
-                  </li>
-                   <li class = "nav-item ">
-                     <a class = "nav-link" href = "login.html" th:href ="@{/login}">Log off</a>
-                  </li>
-               </ul>
-               
-            </div>
-      	</nav> 
-      	</div>
+	<div class="card-body">
+		<nav class="navbar navbar-expand-sm navbar-dark bg-secondary">
+			<a class="navbar-brand" href="">PayMyBuddy</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
+				data-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item"><a class="nav-link active"
+						href="/home.html" th:href="@{/home}">Home</a></li>
+					<li class="nav-item"><a class="nav-link" href="/transfer.html"
+						th:href="@{/transfer}">Transfer</a></li>
+					<li class="nav-item "><a class="nav-link"
+						href="templates/profile.html" th:href="@{/profile}">Profile</a></li>
+					<li class="nav-item "><a class="nav-link"
+						href="templates/contact.html" th:href="@{/contact}">Contact</a></li>
+					<li class="nav-item "><a class="nav-link" href="login.html"
+						th:href="@{/login}">Log off</a></li>
+				</ul>
+
+			</div>
+		</nav>
+	</div>
+	<div class="container my-2">
+		<h1>Your PayMyBuddy Profile</h1>
+		<div th:if="${message}" th:text="${message}"
+			th:class="${'alert ' + alertClass}"></div>
+		<p>
+			UserName: <span th:text="${userName}"></span>
+		</p>
+		<p>
+			Balance: <span th:text="${balance}"></span>
+		</p>
+		<p>
+			<a th:href="@{/account}" class="btn btn-primary"> Click to Upload
+				Money to Your PayMyBuddy Balance</a>
+		</p>
+		<p>
+			<a th:href="@{/sendMoneyToAccount}" class="btn btn-primary"> Click to Send
+				Money Back To Your Account</a>
+		</p>
+	</div>
 
 </body>
 </html>
