--- a/src/main/resources/templates/uploadToAccount.html
+++ b/src/main/resources/templates/uploadToAccount.html
@@ -16,7 +16,9 @@
 				method="post">
 				<div>
 					<label>Amount</label> <input type="text" th:field="*{amount}"
-						placeholder="Bank Name" class="form-control mb-4 col-4">
+						placeholder="Amount" class="form-control mb-4 col-4">
+						
+						<button type="submit" class="btn btn-info col-2">Send</button>
 				</div>
 			</form>
 		</div>
