--- a/src/main/resources/templates/connection.html
+++ b/src/main/resources/templates/connection.html
@@ -25,13 +25,13 @@
 		<div th:if="${message}" th:text="${message}" th:class="${'alert ' + alertClass}"></div>
 			<div class="form-group">
 			 <div class="col-md-4 col-lg-6">
-				<label for="exampleInputEmail1">Reciever Email</label> <input type="email"
+				<label for="exampleInputEmail1">Receiver Email</label> <input type="email"
 					th:field="*{recieverEmail}" class="form-control" id="exampleInputEmail1"
 					aria-describedby="emailHelp" required>
 			</div>
 			</div>
 			<div class="form-group">
-				<button type="submit" class="btn btn-success" text=>Add Connection</button>
+				<button type="submit" class="btn btn-success" >Add Connection</button>
 				</div>
 </form>
 </div>
