--- a/src/main/resources/templates/updateAccount.html
+++ b/src/main/resources/templates/updateAccount.html
@@ -3,6 +3,10 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>PayMyBuddy</title>
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
 </head>
 <body>
 	<div class="container">
@@ -14,7 +18,7 @@
 			method="POST">
 			<div th:if="${message}" th:text="${message}"
 				th:class="${'alert ' + alertClass}"></div>
-			<input type="text" th:field="*{amount}"
+			<input type="number" th:field="*{amount}"
 				class="form-control mb-4 col-4">
 
 			<button type="submit" class="btn btn-info col-2">Add Money</button>
