--- a/src/main/resources/templates/uploadMoney.html
+++ b/src/main/resources/templates/uploadMoney.html
@@ -3,20 +3,25 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>PayMyBuddy</title>
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
 </head>
 <body>
 	<div class="container">
 		<h1> Top up your PAYMYBUDDY balance   </h1>
 
-		<form action="#" th:action="@{/uploadMoneyToBalance}" th:object="${user}"
+		<form th:action="@{/uploadMoneyToBalance}" th:object="${user}"
 			method="POST">
 			<div th:if="${message}" th:text="${message}"
 				th:class="${'alert ' + alertClass}"></div>
-				<label> Amount</label>
+				<div><label>Amount</label>
 			<input type="number" th:field="*{balance}"
 				class="form-control mb-4 col-4" required>
 
 			<button type="submit" class="btn btn-info col-2">Add Money</button>
+			</div>
 		</form>
 	</div>
 </body>
