--- a/src/main/resources/templates/uploadToAccount.html
+++ b/src/main/resources/templates/uploadToAccount.html
@@ -15,7 +15,7 @@
 			<form th:action="@{/saveMoneyToAccount}" th:object="${account}"
 				method="post">
 				<div>
-					<label>Amount</label> <input type="text" th:field="*{amount}"
+					<label>Amount</label> <input type="number" th:field="*{amount}"
 						placeholder="Amount" class="form-control mb-4 col-4">
 						
 						<button type="submit" class="btn btn-info col-2">Send</button>
